--- a/index.html
+++ b/index.html
@@ -161,6 +161,32 @@
                      <li>Managed emergency response situations and maintained a safe environment for patrons.</li>
                   </ul>
                </div>
+               <div class="experience-card">
+                  <div class="experience-icon">
+                     <i class="bx bx-user-check"></i>
+                  </div>
+                  <h3>IndEyes Infotech Private Limited, India</h3>
+                  <p><strong>C++ & Data Structures and Algorithms Intern</strong></p>
+                  <ul>
+                     <li>Optimized algorithm efficiency by 30% through enhanced data structure
+                        implementations.</li>
+                     <li>Developed efficient algorithms, improving computational performance for real-world
+                        applications.
+                        </li>
+                  </ul>
+               </div>
+               <div class="experience-card">
+                  <div class="experience-icon">
+                     <i class="bx bx-user-check"></i>
+                  </div>
+                  <h3>IndEyes Infotech Private Limited, India</h3>
+                  <p><strong>Python & AI/ML Intern</strong></p>
+                  <ul>
+                     <li>Developed and fine-tuned ML models, improving prediction accuracy by 20%.</li>
+                     <li>Applied machine learning algorithms for data-driven insights and automation
+                        solutions.</li>
+                  </ul>
+               </div>
             </div>
          </section>
          <!--===== WORK =====-->
