--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         
       <!--===== FOOTER =====-->
       <footer class="footer">
-         <p class="footer__title">Rajendar</p>
+         <p class="footer__title">Rajendra</p>
          <div class="footer__social">
             <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
             <a href="https://www.instagram.com/raj.end.ra/?hl=en" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
