--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <a href="https://www.instagram.com/raj.end.ra/?hl=en" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
          </div>
-         <p class="footer__copy">&#169; Rajendar. All rigths reserved</p>
+         <p class="footer__copy">&#169; Rajendra. All rigths reserved</p>
       </footer>
       <!--===== SCROLL REVEAL =====-->
       <script src="https://unpkg.com/scrollreveal"></script>
